tests/baselines/reference/classExtendsItself.errors.txt
==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsItself.ts (3 errors) ====
    class C extends C { } // error
          ~
!!! error TS2310: Type 'C' recursively references itself as a base type.
    
    class D<T> extends D<T> { } // error
          ~
!!! error TS2310: Type 'D<T>' recursively references itself as a base type.
    
    class E<T> extends E<string> { } // error
          ~
!!! error TS2310: Type 'E<T>' recursively references itself as a base type.